# sceptre-date-resolver

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
resolver/: date.py
tests/: test_date.py
