[tool.poetry]
name = "sceptre-date-resolver"
version = "1.0.2"
packages = [{ include = "resolver" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-date-resolver"
repository = "https://github.com/Sceptre/sceptre-date-resolver"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "A Sceptre resolver to retrieve the current datetime"
keywords = ["sceptre", "sceptre-resolver"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
]

[tool.poetry.plugins."sceptre.resolvers"]
"date" = "resolver.date:DateResolver"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
tox = "^3.23.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
mock = "^2.0"
sceptre = "^4.0"
tox-gh-matrix = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
